@@ -333,7 +333,7 @@ public class ATSImportTool extends Configured implements Tool {
     public HttpURLConnection getConnection(URL url) throws IOException {
       String tokenString = (url.getQuery() == null ? "?" : "&") + "user.name=" +
           URLEncoder.encode(UserGroupInformation.getCurrentUser().getShortUserName(), StandardCharsets.UTF_8);
-      return (HttpURLConnection) (new URL(url.toString() + tokenString)).openConnection();
+      return (HttpURLConnection) URI.create(url.toString() + tokenString).toURL().openConnection();
     }
   }
 
